--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -28,6 +28,7 @@
         android:id="@+id/datePicker"
         android:datePickerMode="spinner"
         android:calendarViewShown="false"
+        android:layout_marginBottom="8dp"
         android:layout_gravity="center_horizontal"
         android:layout_width="wrap_content"
         android:layout_height="140dp"/>
