--- a/app/src/main/res/layout/sountselect_item.xml
+++ b/app/src/main/res/layout/sountselect_item.xml
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:orientation="vertical"
-              android:padding="8dp"
               android:layout_width="match_parent"
               android:layout_height="match_parent">
-    <ListView
-        android:id="@+id/select_sound_lv"
+    <TextView
+        android:id="@+id/track_title"
+        android:textStyle="bold"
+        android:textSize="18sp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="8dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-    </ListView>
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
