--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -28,4 +28,13 @@
         android:layout_alignRight="@+id/main_time"
         android:layout_alignEnd="@+id/main_time"/>
 
+    <android.support.design.widget.FloatingActionButton
+        android:id="@+id/stop_alarm"
+        android:src="@drawable/ic_alarm_black_24dp"
+        android:layout_centerVertical="true"
+        android:layout_centerHorizontal="true"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
+
 </RelativeLayout>
