--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,18 @@
         android:paddingBottom="8dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
+        android:background="@drawable/bg"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
         <TextView
             android:id="@+id/main_time"
             android:text="15:00"
-            android:textSize="52sp"
+            android:shadowRadius="20"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowColor="#ffffff"
+            android:textSize="56sp"
             android:textStyle="bold"
             android:fontFamily="monospace"
             android:layout_centerHorizontal="true"
@@ -29,6 +34,10 @@
             android:id="@+id/main_date"
             android:textStyle="bold"
             android:text="ср, 3 мая"
+            android:shadowRadius="2"
+            android:shadowDx="1"
+            android:shadowDy="1"
+            android:shadowColor="#ffffff"
             android:layout_marginTop="8dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -63,17 +72,20 @@
             android:id="@+id/add_alarm"
             android:src="@drawable/ic_add_black_24dp"
             fab:fab_label="Добавить будильник"
+            fab:fab_colorNormal="@color/blue_semi_transparent"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/history_alarm"
             fab:fab_label="Будильники"
+            fab:fab_colorNormal="#63e22c"
             android:src="@drawable/ic_assignment_black_24dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
         <com.github.clans.fab.FloatingActionButton
             android:id="@+id/exit"
             android:src="@drawable/ic_exit_to_app_black_24dp"
+            fab:fab_colorNormal="#ac00fd"
             fab:fab_label="Выход"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
