--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -36,5 +36,16 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"/>
 
+    <LinearLayout
+        android:id="@+id/game_ll"
+        android:layout_below="@+id/stop_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
+
 
 </RelativeLayout>
