--- a/app/src/main/res/drawable/button_circle_backgrount.xml
+++ b/app/src/main/res/drawable/button_circle_backgrount.xml
@@ -10,8 +10,10 @@
         </shape>
     </item>
     <item
-        android:top="4dp"
-        android:bottom="4dp">
+        android:top="5dp"
+        android:left="5dp"
+        android:right="5dp"
+        android:bottom="5dp">
         <shape android:shape="oval">
             <solid android:color="#44afcc" />
         </shape>
