--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -28,29 +28,14 @@
         android:layout_alignRight="@+id/main_time"
         android:layout_alignEnd="@+id/main_time"/>
 
-    <android.support.design.widget.FloatingActionButton
+
+    <com.ebanx.swipebtn.SwipeButton
         android:id="@+id/stop_alarm"
-        android:src="@drawable/ic_alarm_black_24dp"
+        android:layout_below="@+id/main_date"
+        android:layout_marginTop="100dp"
+        android:layout_centerInParent="true"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
-
-
-
-    <LinearLayout
-        android:id="@+id/game_ll"
-        android:layout_below="@+id/stop_alarm"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
-    <com.ebanx.swipebtn.SwipeButton
-        android:id="@+id/swipe_button"
-        android:layout_below="@+id/game_ll"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
@@ -74,5 +59,15 @@
         app:has_activate_state="true">
     </com.ebanx.swipebtn.SwipeButton>
 
+    <LinearLayout
+        android:id="@+id/game_ll"
+        android:layout_below="@+id/stop_alarm"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
+    </LinearLayout>
 
 </RelativeLayout>
