--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -5,12 +5,17 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/bg"
     tools:context="cav.antidream.ui.activity.AlarmSignalActivity">
     <TextView
         android:id="@+id/main_time"
         android:text="15:00"
-        android:textSize="52sp"
+        android:textSize="56sp"
         android:textStyle="bold"
+        android:shadowRadius="25"
+        android:shadowDx="1.5"
+        android:shadowDy="1.5"
+        android:shadowColor="#ffffff"
         android:fontFamily="monospace"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="25dp"
