--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -26,6 +26,10 @@
         android:id="@+id/main_date"
         android:textStyle="bold"
         android:text="ср, 3 мая"
+        android:shadowRadius="2"
+        android:shadowDx="1.5"
+        android:shadowDy="1.5"
+        android:shadowColor="#ffffff"
         android:layout_marginTop="8dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -69,10 +73,55 @@
         android:layout_below="@+id/stop_alarm"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <ImageView
-            android:layout_width="wrap_content"
+        android:orientation="vertical">
+        <TextView
+            android:text="Игра - угадай где?"
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_marginBottom="8dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <TextView
+            android:id="@+id/game_status"
+            android:gravity="center"
+            android:textStyle="bold"
+            android:textSize="16sp"
+            android:textColor="#32e7ed"
+            android:layout_marginBottom="16dp"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+            <ImageView
+                android:id="@+id/game_im1"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:src="@drawable/pill"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"/>
+            <ImageView
+                android:id="@+id/game_im2"
+                android:src="@drawable/pill"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"/>
+            <ImageView
+                android:id="@+id/game_im3"
+                android:src="@drawable/pill"
+                android:layout_marginLeft="4dp"
+                android:layout_marginRight="4dp"
+                android:layout_weight="1"
+                android:layout_width="wrap_content"
+                android:layout_height="180dp"/>
+        </LinearLayout>
+
+
     </LinearLayout>
 
 </RelativeLayout>
