--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -33,7 +33,7 @@
             android:layout_height="wrap_content"/>
     </LinearLayout>
 
-    <Switch
+    <android.support.v7.widget.SwitchCompat
         android:id="@+id/switch1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
