--- a/app/src/main/res/layout/history_item.xml
+++ b/app/src/main/res/layout/history_item.xml
@@ -8,6 +8,8 @@
               android:layout_height="match_parent">
     <LinearLayout
         android:orientation="vertical"
+        android:focusableInTouchMode="true"
+        android:clickable="true"
         android:layout_weight="1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
@@ -37,7 +39,7 @@
         android:id="@+id/switch1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24sp"
+        android:layout_marginTop="22dp"
         android:layout_weight="3"/>
 
 </LinearLayout>
