--- a/app/src/main/res/layout/activity_add_alarm.xml
+++ b/app/src/main/res/layout/activity_add_alarm.xml
@@ -7,6 +7,7 @@
     android:layout_height="match_parent"
     android:padding="8dp"
     android:orientation="vertical"
+    android:background="@drawable/bg"
     tools:context="cav.antidream.ui.activity.AddAlarm">
 
     <ScrollView
@@ -16,87 +17,9 @@
             android:orientation="vertical"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-            <TextView
-                android:text="Выберите время:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-            <TimePicker
-                android:id="@+id/timePicker"
-                android:timePickerMode="spinner"
-                android:layout_gravity="center_horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="140dp"/>
-
-            <TextView
-                android:text="Выберите день:"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"/>
-
-            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
-                android:id="@+id/data_calendar"
-                android:layout_gravity="center_horizontal"
-                app:mcv_calendarMode="week"
-                app:mcv_dateTextAppearance="@style/CustomTextAppearance"
-                app:mcv_selectionColor="?attr/colorAccent"
-                app:mcv_showOtherDates="out_of_range"
-                android:layout_width="match_parent"
-                android:layout_height="170dp">
-            </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_marginBottom="8dp"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:id="@+id/select_sound"
-                    android:layout_weight="1"
-                    android:text="Выберите мелодию: "
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <ImageView
-                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="16dp"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:text="Громкость звонка"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <SeekBar
-                    android:id="@+id/volime_seek"
-                    android:max="5"
-                    style="@style/MySeekBar"
-                    android:maxHeight="15dp"
-                    android:minWidth="15dp"
-                    android:progress="5"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
-            <LinearLayout
-                android:layout_marginTop="16dp"
-                android:orientation="horizontal"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:layout_weight="1"
-                    android:text="Отключить будильник: "
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-                <Spinner
-                    android:id="@+id/alarm_stop_type"
-                    android:layout_weight="1"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </LinearLayout>
             <LinearLayout
                 android:id="@+id/set_name_alarm"
-                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
                 android:orientation="horizontal"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -124,6 +47,105 @@
                     android:layout_height="wrap_content"/>
 
             </LinearLayout>
+            <TextView
+                android:text="Выберите время:"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <TimePicker
+                android:id="@+id/timePicker"
+                android:timePickerMode="spinner"
+                android:layout_gravity="center_horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="140dp"/>
+
+            <TextView
+                android:text="Выберите день:"
+                android:textStyle="bold"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
+                android:id="@+id/data_calendar"
+                android:layout_gravity="center_horizontal"
+                app:mcv_calendarMode="week"
+                app:mcv_dateTextAppearance="@style/CustomTextAppearance"
+                app:mcv_selectionColor="?attr/colorAccent"
+                app:mcv_showOtherDates="out_of_range"
+                android:layout_width="match_parent"
+                android:layout_height="170dp">
+            </com.prolificinteractive.materialcalendarview.MaterialCalendarView>
+
+            <LinearLayout
+                android:id="@+id/select_sound_lv"
+                android:orientation="horizontal"
+                android:layout_marginBottom="8dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <LinearLayout
+                    android:orientation="vertical"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+                    <TextView
+                        android:text="Мелодия сигнала "
+                        android:textStyle="bold"
+                        android:textSize="16sp"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                    <TextView
+                        android:id="@+id/select_sound"
+                        android:text="Выберите мелодию"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"/>
+                </LinearLayout>
+                <ImageView
+                    android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
+                    android:layout_marginTop="8dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="16dp"
+                android:orientation="vertical"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:text="Громкость звонка"
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <SeekBar
+                    android:id="@+id/volime_seek"
+                    android:max="5"
+                    style="@style/Widget.AppCompat.SeekBar"
+                    android:thumb="@drawable/seek_traker"
+                    android:progressDrawable="@drawable/seekbar_draw"
+                    android:maxHeight="15dp"
+                    android:minWidth="15dp"
+                    android:progress="5"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="16dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <TextView
+                    android:layout_weight="1"
+                    android:text="Отключить будильник: "
+                    android:textStyle="bold"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+                <Spinner
+                    android:id="@+id/alarm_stop_type"
+                    android:layout_weight="1"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
