--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -49,7 +49,7 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        app:inner_text="SWIPE"
+        app:inner_text="Отключить"
         app:inner_text_color="@android:color/white"
         app:inner_text_size="16sp"
         app:inner_text_top_padding="18dp"
