--- a/app/src/main/res/layout/activity_history_alarm.xml
+++ b/app/src/main/res/layout/activity_history_alarm.xml
@@ -9,6 +9,7 @@
     android:paddingTop="8dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
+    android:background="@drawable/bg"
     tools:context="cav.antidream.ui.activity.HistoryAlarm">
     <ListView
         android:id="@+id/history_list"
