--- a/app/src/main/res/layout/activity_alarm_signal.xml
+++ b/app/src/main/res/layout/activity_alarm_signal.xml
@@ -97,27 +97,27 @@
             android:layout_height="wrap_content">
             <ImageView
                 android:id="@+id/game_im1"
+                android:layout_weight="1"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
                 android:src="@drawable/pill"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="118dp"
                 android:layout_height="180dp"/>
             <ImageView
                 android:id="@+id/game_im2"
                 android:src="@drawable/pill"
+                android:layout_weight="1"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="118dp"
                 android:layout_height="180dp"/>
             <ImageView
                 android:id="@+id/game_im3"
                 android:src="@drawable/pill"
+                android:layout_weight="1"
                 android:layout_marginLeft="4dp"
                 android:layout_marginRight="4dp"
-                android:layout_weight="1"
-                android:layout_width="wrap_content"
+                android:layout_width="118dp"
                 android:layout_height="180dp"/>
         </LinearLayout>
 
